office-service/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: office
spec:
  selector:
    matchLabels:
      app: office
  replicas: 1
  template:
    metadata:
      labels:
        app: office
    spec:
      containers:
      - name: office-service
        image: abdul125/office-service
        ports:
        - containerPort: 80
