office-service/office-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: office-deployment
spec:
  selector:
    matchLabels:
      app: office-api
  replicas: 2
  template:
    metadata:
      labels:
        app: office-api
    spec:
      containers:
      - name: office-service
        image: abdul125/office-service
        ports:
        - containerPort: 80
