office-service/office-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: office
  labels:
    app: office
spec:
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: office-api
